--- a/pages/18421.html
+++ b/pages/18421.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -778,7 +777,7 @@ margin-left: 0em;
 </ul>
 </div>
 
-<h4 id='topos_theory'><math class='maruku-mathml' display='inline' id='mathml_7c61176f7851df5ea136d5c87e36e37a2ab406ad_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory'><math class='maruku-mathml' display='inline' id='mathml_12090b28833b6e9485f6b39f3f68929f3c5584a3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -840,7 +839,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+of+%28infinity%2C1%29-sheaves'>(∞,1)-category of (∞,1)-sheaves</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-sheaf'>(∞,1)-sheaf</a>/<a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stack</a>/<a class='existingWikiWord' href='/nlab/show/derived+stack'>derived stack</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-sheaf'>(∞,1)-sheaf</a>/<span class='newWikiWord'>∞-stack<a href='/nlab/new/%E2%88%9E-stack'>?</a></span>/<a class='existingWikiWord' href='/nlab/show/derived+stack'>derived stack</a></li>
 </ul>
 </li>
 
@@ -923,7 +922,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/universal+colimit'>universal colimits</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/pullback-stable+colimit'>universal colimits</a></p>
 </li>
 
 <li>
@@ -1116,29 +1115,29 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <em>topological ∞-groupoid</em> is meant to be an <a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>∞-groupoid</a> that is equipped with <a class='existingWikiWord' href='/nlab/show/topology'>topological</a> structure. For instance a <a class='existingWikiWord' href='/nlab/show/truncated+object'>0-truncated</a> topological <math class='maruku-mathml' display='inline' id='mathml_7c61176f7851df5ea136d5c87e36e37a2ab406ad_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoid should just be a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a>, and 1-truncated topological <math class='maruku-mathml' display='inline' id='mathml_7c61176f7851df5ea136d5c87e36e37a2ab406ad_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids should reproduce <a class='existingWikiWord' href='/nlab/show/topological+groupoid'>topological groupoids</a>/<a class='existingWikiWord' href='/nlab/show/topological+stack'>topological stacks</a>, etc.</p>
+<p>A <em>topological ∞-groupoid</em> is meant to be an <a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>∞-groupoid</a> that is equipped with <a class='existingWikiWord' href='/nlab/show/topology'>topological</a> structure. For instance a <a class='existingWikiWord' href='/nlab/show/truncated+object'>0-truncated</a> topological <math class='maruku-mathml' display='inline' id='mathml_12090b28833b6e9485f6b39f3f68929f3c5584a3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoid should just be a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a>, and 1-truncated topological <math class='maruku-mathml' display='inline' id='mathml_12090b28833b6e9485f6b39f3f68929f3c5584a3_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids should reproduce <a class='existingWikiWord' href='/nlab/show/topological+groupoid'>topological groupoids</a>/<a class='existingWikiWord' href='/nlab/show/topological+stack'>topological stacks</a>, etc.</p>
 
-<p>A generic way to make sense of this in a <em><a class='existingWikiWord' href='/nlab/show/big+and+little+toposes'>gros topos</a></em> perspective is to pick some small <a class='existingWikiWord' href='/nlab/show/subcategory'>subcategory</a> <math class='maruku-mathml' display='inline' id='mathml_7c61176f7851df5ea136d5c87e36e37a2ab406ad_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Top</mi> <mi>sm</mi></msub></mrow><annotation encoding='application/x-tex'>Top_{sm}</annotation></semantics></math> of the category <a class='existingWikiWord' href='/nlab/show/Top'>Top</a> of <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a>, regard it as a <a class='existingWikiWord' href='/nlab/show/site'>site</a> with respect to an evident <a class='existingWikiWord' href='/nlab/show/coverage'>coverage</a> by <a class='existingWikiWord' href='/nlab/show/open+cover'>open covers</a>, and then take the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a> of generalized topological <math class='maruku-mathml' display='inline' id='mathml_7c61176f7851df5ea136d5c87e36e37a2ab406ad_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids to be the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+of+%28infinity%2C1%29-sheaves'>(∞,1)-category of (∞,1)-sheaves</a> on this site:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7c61176f7851df5ea136d5c87e36e37a2ab406ad_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Top</mi><mn>∞</mn><mi>Grpd</mi><mo>≔</mo><msub><mi>Sh</mi> <mn>∞</mn></msub><mo stretchy='false'>(</mo><msub><mi>Top</mi> <mi>sm</mi></msub><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>A generic way to make sense of this in a <em><a class='existingWikiWord' href='/nlab/show/big+and+little+toposes'>gros topos</a></em> perspective is to pick some small <a class='existingWikiWord' href='/nlab/show/subcategory'>subcategory</a> <math class='maruku-mathml' display='inline' id='mathml_12090b28833b6e9485f6b39f3f68929f3c5584a3_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Top</mi> <mi>sm</mi></msub></mrow><annotation encoding='application/x-tex'>Top_{sm}</annotation></semantics></math> of the category <a class='existingWikiWord' href='/nlab/show/Top'>Top</a> of <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a>, regard it as a <a class='existingWikiWord' href='/nlab/show/site'>site</a> with respect to an evident <a class='existingWikiWord' href='/nlab/show/coverage'>coverage</a> by <a class='existingWikiWord' href='/nlab/show/open+cover'>open covers</a>, and then take the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a> of generalized topological <math class='maruku-mathml' display='inline' id='mathml_12090b28833b6e9485f6b39f3f68929f3c5584a3_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids to be the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+of+%28infinity%2C1%29-sheaves'>(∞,1)-category of (∞,1)-sheaves</a> on this site:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_12090b28833b6e9485f6b39f3f68929f3c5584a3_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Top</mi><mn>∞</mn><mi>Grpd</mi><mo>≔</mo><msub><mi>Sh</mi> <mn>∞</mn></msub><mo stretchy='false'>(</mo><msub><mi>Top</mi> <mi>sm</mi></msub><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   Top \infty Grpd \coloneqq Sh_\infty(Top_{sm})
   \,.
 
 </annotation></semantics></math></div>
 <p>This gives a nice category with very general objects. In there one may find smaller, less nice categories of nicer objects.</p>
 
-<p>There are different choices of <a class='existingWikiWord' href='/nlab/show/site'>sites</a> <math class='maruku-mathml' display='inline' id='mathml_7c61176f7851df5ea136d5c87e36e37a2ab406ad_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Top</mi> <mi>sm</mi></msub></mrow><annotation encoding='application/x-tex'>Top_{sm}</annotation></semantics></math> to make. For instance</p>
+<p>There are different choices of <span class='newWikiWord'>sites<a href='/nlab/new/sites'>?</a></span> <math class='maruku-mathml' display='inline' id='mathml_12090b28833b6e9485f6b39f3f68929f3c5584a3_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Top</mi> <mi>sm</mi></msub></mrow><annotation encoding='application/x-tex'>Top_{sm}</annotation></semantics></math> to make. For instance</p>
 
 <ol>
 <li>
-<p>taking <math class='maruku-mathml' display='inline' id='mathml_7c61176f7851df5ea136d5c87e36e37a2ab406ad_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Top</mi> <mi>sm</mi></msub></mrow><annotation encoding='application/x-tex'>Top_{sm}</annotation></semantics></math> to be a small site of <a class='existingWikiWord' href='/nlab/show/locally+contractible+space'>locally contractible topological spaces</a> yields a concept of <em><a class='existingWikiWord' href='/nlab/show/locally+contractible+topological+infinity-groupoid'>locally contractible topological infinity-groupoids</a></em>;</p>
+<p>taking <math class='maruku-mathml' display='inline' id='mathml_12090b28833b6e9485f6b39f3f68929f3c5584a3_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Top</mi> <mi>sm</mi></msub></mrow><annotation encoding='application/x-tex'>Top_{sm}</annotation></semantics></math> to be a small site of <a class='existingWikiWord' href='/nlab/show/locally+contractible+space'>locally contractible topological spaces</a> yields a concept of <em><a class='existingWikiWord' href='/nlab/show/locally+contractible+topological+infinity-groupoid'>locally contractible topological infinity-groupoids</a></em>;</p>
 </li>
 
 <li>
-<p>taking <math class='maruku-mathml' display='inline' id='mathml_7c61176f7851df5ea136d5c87e36e37a2ab406ad_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Top</mi> <mi>sm</mi></msub></mrow><annotation encoding='application/x-tex'>Top_{sm}</annotation></semantics></math> be the the subcategory of topological <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian spaces</a> yield a concept of <a class='existingWikiWord' href='/nlab/show/Euclidean-topological+infinity-groupoid'>Euclidean-topological infinity-groupoids</a>.</p>
+<p>taking <math class='maruku-mathml' display='inline' id='mathml_12090b28833b6e9485f6b39f3f68929f3c5584a3_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Top</mi> <mi>sm</mi></msub></mrow><annotation encoding='application/x-tex'>Top_{sm}</annotation></semantics></math> be the the subcategory of topological <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian spaces</a> yield a concept of <a class='existingWikiWord' href='/nlab/show/Euclidean-topological+infinity-groupoid'>Euclidean-topological infinity-groupoids</a>.</p>
 </li>
 </ol>
 
-<p>These two hapenns to constitute <a class='existingWikiWord' href='/nlab/show/cohesive+%28infinity%2C1%29-topos'>cohesive ∞-toposes</a>, due to the local contractibility of the objects in the site.</p>
+<p>These two happen to constitute <a class='existingWikiWord' href='/nlab/show/cohesive+%28infinity%2C1%29-topos'>cohesive ∞-toposes</a>, due to the local contractibility of the objects in the site.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1148,7 +1147,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/smooth+infinity-groupoid'>smooth ∞-groupoid</a></p>
+<p><span class='newWikiWord'>smooth ∞-groupoid<a href='/nlab/new/smooth+%E2%88%9E-groupoid'>?</a></span></p>
 </li>
 
 <li>
@@ -1183,19 +1182,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 11, 2017 17:32:13 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (209.93.157.137)
+  <p>
+  Last revised on July 25, 2018 at 11:43:21.
+  See the <a href="https://ncatlab.org/nlab/history/topological infinity-groupoid" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/topological+infinity-groupoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+infinity-groupoid/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/topological+infinity-groupoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+infinity-groupoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/topological+infinity-groupoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+infinity-groupoid/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/topological+infinity-groupoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+infinity-groupoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/topological infinity-groupoid/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/topological+infinity-groupoid" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/topological+infinity-groupoid" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/topological+infinity-groupoid" id="view_source" rel="nofollow">Source</a>
