--- a/pages/19539.html
+++ b/pages/19539.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Pavel Aleksandrov in nLab
+      John Terilla in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Pavel Aleksandrov
+      John Terilla
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8762/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -307,59 +307,37 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p>Па́вел Серге́евич Алекса́ндров (Pavel Sergeevič Alexandrov, published as Paul Alexandroff) was a Russian <a class='existingWikiWord' href='/nlab/show/topology'>topologist</a>.</p>
-
-<ul>
-<li>Wikipedia: <a href='http://en.wikipedia.org/wiki/Pavel_Alexandrov'>English</a>, <a href='http://de.wikipedia.org/wiki/Pawel_Sergejewitsch_Alexandrow'>German</a>, <a href='http://ru.wikipedia.org/wiki/%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2,_%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB_%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B5%D0%B2%D0%B8%D1%87'>Russian</a></li>
-
-<li>math-net.ru <a href='http://www.mathnet.ru/php/person.phtml?personid=21996&amp;option_lang=eng'>page</a></li>
+      <ul>
+<li><a href='http://qcpages.qc.cuny.edu/~jterilla/'>webpage</a></li>
 </ul>
 
-<h2 id='related_entries'>Related entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_ca8300a01b03157d45300da750a248172bbd7507_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/specialization+topology'>Alexandroff space</a> (<a class='existingWikiWord' href='/nlab/show/specialization+topology'>specialization topology</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/subspace+topology'>topological subspace</a></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
-
-<p>
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 25, 2018 at 11:29:22.
-  See the <a href="https://ncatlab.org/nlab/history/Pavel Aleksandrov" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July 25, 2018 at 11:46:29.
+  See the <a href="https://ncatlab.org/nlab/history/John Terilla" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Pavel+Aleksandrov" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Pavel+Aleksandrov/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Pavel+Aleksandrov" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Pavel+Aleksandrov" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Pavel Aleksandrov/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/John+Terilla" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/John Terilla/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Pavel+Aleksandrov" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/John+Terilla" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Pavel+Aleksandrov" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/John+Terilla" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Pavel+Aleksandrov" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/John+Terilla" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
